@@ -1,9 +1,12 @@
-package com.gaplog.server.domain.comment.application;
+package com.gaplog.server.domain.comment;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.gaplog.server.domain.comment.application.CommentService;
 import com.gaplog.server.domain.comment.dao.CommentLikeRepository;
 import com.gaplog.server.domain.comment.dao.CommentRepository;
 import com.gaplog.server.domain.comment.domain.Comment;
 import com.gaplog.server.domain.comment.domain.CommentLike;
+import com.gaplog.server.domain.comment.dto.response.CommentLikeUpdateResponse;
 import com.gaplog.server.domain.comment.dto.response.CommentResponse;
 import com.gaplog.server.domain.comment.dto.response.CommentUpdateResponse;
 import com.gaplog.server.domain.post.dao.PostRepository;
@@ -13,70 +16,171 @@ import com.gaplog.server.domain.user.domain.User;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
+
+import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.test.context.ActiveProfiles;
 
 import java.util.List;
-import java.util.concurrent.CountDownLatch;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
+import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 @SpringBootTest
+@AutoConfigureMockMvc
+@ActiveProfiles("test")
 public class CommentServiceTest {
 
-    @Autowired
     private CommentService commentService;
-    @Autowired
     private CommentRepository commentRepository;
-    @Autowired
     private PostRepository postRepository;
-    @Autowired
     private UserRepository userRepository;
-    @Autowired
     private CommentLikeRepository commentLikeRepository;
+
+    @BeforeEach
+    void setUp() {
+        commentRepository = mock(CommentRepository.class);
+        postRepository = mock(PostRepository.class);
+        userRepository = mock(UserRepository.class);
+        commentLikeRepository = mock(CommentLikeRepository.class);
+        commentService = new CommentService(commentRepository, postRepository, userRepository, commentLikeRepository);
+    }
 
     private User user;
     private Post post;
-    @BeforeEach
-    void setUp(){
-        user = new User(3L, "testUser");
-        userRepository.save(user);
 
-        post = Post.of("testPost", "0", null, "tsetUrl", user);
-        postRepository.save(post);
-    }
 
     @Test
     @DisplayName("댓글 생성 테스트")
-    void createCommentTest(){
-        // Given
+    void createCommentTest() throws Exception {
 
-        // When
-        CommentResponse response = commentService.createComment(post.getId(), user.getId(), "testCommment1", null);
-        Long commentId = response.getCommentId();
-        Comment comment = commentRepository.findById(commentId).orElseThrow(() -> new IllegalArgumentException("comment not found"));
+        Long postId = 1L;
+        Long userId = 1L;
+        String text = "Test comment";
+        Long parentId = null;
 
-        // Then
-        assertEquals(comment.getText(), "testCommment1");
+        Post post = new Post(); // Post 객체 생성
+        User user = new User(); // User 객체 생성
+
+        when(postRepository.findById(postId)).thenReturn(Optional.of(post));
+        when(userRepository.findById(userId)).thenReturn(Optional.of(user));
+        when(commentRepository.save(any(Comment.class))).thenAnswer(invocation -> invocation.getArgument(0));
+
+        CommentResponse response = commentService.createComment(postId, userId, text, parentId);
+
+        assertNotNull(response);
+
+        assertEquals(text, response.getText());
     }
 
     @Test
     @DisplayName("댓글 수정 테스트")
     void updateCommentTest(){
-        // Given
-        CommentResponse response = commentService.createComment(post.getId(), user.getId(), "testCommment1", null);
-        Long commentId = response.getCommentId();
+        Long commentId = 1L;
+        String newText = "Updated text";
 
-        // When
-        CommentUpdateResponse updateResponse = commentService.updateComment(commentId, "updateTest");
-        Comment comment = commentRepository.findById(updateResponse.getCommentId()).orElseThrow(() -> new IllegalArgumentException("comment not found"));
+        Comment comment = new Comment();
+        comment.setText("Old text");
 
-        // Then
-        assertEquals(comment.getText(), "updateTest");
+        when(commentRepository.findById(commentId)).thenReturn(Optional.of(comment));
+        when(commentRepository.save(any(Comment.class))).thenReturn(comment);
+
+        CommentUpdateResponse response = commentService.updateComment(commentId, newText);
+
+        assertNotNull(response);
+        assertEquals(newText, response.getText());
     }
 
+    @Test
+    void deleteComment_ShouldSetDeletedTrue() {
+        Long commentId = 1L;
+
+        Comment comment = new Comment();
+
+        when(commentRepository.findById(commentId)).thenReturn(Optional.of(comment));
+        when(commentRepository.findByParentId(commentId)).thenReturn(List.of());
+
+        commentService.deleteComment(commentId);
+
+        assertTrue(comment.getIsDeleted());
+        verify(commentRepository, times(1)).save(comment);
+    }
+
+    @Test
+    @DisplayName("댓글 삭제 테스트 - 자식 댓글이 있는 경우")
+    void deleteParentCommentWithChildComments() {
+        // Given
+        Long parentId = 1L;
+        Comment parentComment = new Comment();
+
+        when(commentRepository.findById(parentId)).thenReturn(Optional.of(parentComment));
+        when(commentRepository.save(any(Comment.class))).thenAnswer(invocation -> invocation.getArgument(0));
+
+        // 자식 댓글 생성
+        Comment childComment1 = new Comment();
+        Comment childComment2 = new Comment();
+
+        when(commentRepository.findByParentId(parentId)).thenReturn(List.of(childComment1, childComment2));
+
+        // When
+        assertFalse(parentComment.getIsDeletedParent());
+        assertFalse(parentComment.getIsDeleted());
+
+        commentService.deleteComment(parentId);
+
+        // Then
+        parentComment = commentRepository.findById(parentId).orElseThrow(() -> new IllegalArgumentException("Parent comment not found"));
+        assertTrue(parentComment.getIsDeletedParent());
+        assertFalse(parentComment.getIsDeleted());
+    }
+
+    @Test
+    void updateLikeCount_ShouldReturnCommentLikeUpdateResponse() {
+        Long userId = 1L;
+        Long commentId = 1L;
+
+        User user = new User();
+        Comment comment = new Comment();
+        comment.setLikeCount(0);
+
+        when(userRepository.findById(userId)).thenReturn(Optional.of(user));
+        when(commentRepository.findById(commentId)).thenReturn(Optional.of(comment));
+        when(commentLikeRepository.existsByUserIdAndCommentId(userId, commentId)).thenReturn(false);
+        when(commentLikeRepository.save(any(CommentLike.class))).thenAnswer(invocation -> invocation.getArgument(0));
+        when(commentRepository.save(any(Comment.class))).thenReturn(comment);
+
+        CommentLikeUpdateResponse response = commentService.updateLikeCount(userId, commentId);
+
+        assertNotNull(response);
+        assertEquals(1, response.getLikes());
+        assertTrue(response.isLiked());
+    }
+
+    @Test
+    void updateLikeCount_ShouldDecreaseLikeCount() {
+        Long userId = 1L;
+        Long commentId = 1L;
+
+        User user = new User();
+        Comment comment = new Comment();
+        comment.setLikeCount(1);
+
+        when(userRepository.findById(userId)).thenReturn(Optional.of(user));
+        when(commentRepository.findById(commentId)).thenReturn(Optional.of(comment));
+        when(commentLikeRepository.existsByUserIdAndCommentId(userId, commentId)).thenReturn(true);
+        doNothing().when(commentLikeRepository).deleteByUserIdAndCommentId(userId, commentId);
+        when(commentRepository.save(any(Comment.class))).thenReturn(comment);
+
+        CommentLikeUpdateResponse response = commentService.updateLikeCount(userId, commentId);
+
+        assertNotNull(response);
+        assertEquals(0, response.getLikes());
+        assertFalse(response.isLiked());
+    }
+
+
+    /*
     @Test
     @DisplayName("댓글 삭제 테스트 - 자식 댓글이 있는 경우")
     void deleteParentCommentWithChildComments() {
@@ -158,19 +262,18 @@ public class CommentServiceTest {
     @DisplayName("한 유저가 좋아요 눌렀다 지우기")
     void likeUpdateTest() throws InterruptedException {
         // Given
-        User user1 = userRepository.findById(10L).orElseThrow(() -> new IllegalArgumentException("user not found"));
         CommentResponse response = commentService.createComment(post.getId(), user.getId(), "testComment", null);
         Long commentId = response.getCommentId();
 
         // When
-        commentService.updateLikeCount(user1.getId(), commentId);
+        commentService.updateLikeCount(user.getId(), commentId);
 
         // Then
         Comment comment = commentRepository.findById(commentId).orElseThrow(() -> new IllegalArgumentException("Comment not found"));
         assertEquals(comment.getLikeCount(), 1);
 
         // When
-        commentService.updateLikeCount(user1.getId(), commentId);
+        commentService.updateLikeCount(user.getId(), commentId);
 
         // Then
         comment = commentRepository.findById(commentId).orElseThrow(() -> new IllegalArgumentException("Comment not found"));
@@ -181,14 +284,14 @@ public class CommentServiceTest {
     @DisplayName("여러 유저가 좋아요 누르기")
     void likeUpdateTest2() throws InterruptedException {
         // Given
-        User user1 = userRepository.findById(10L).orElseThrow(() -> new IllegalArgumentException("user not found"));
-        User user2 = userRepository.findById(11L).orElseThrow(() -> new IllegalArgumentException("user not found"));
+        User user2 = new User(2L, "testUser2");
+        userRepository.save(user2);
 
         CommentResponse response = commentService.createComment(post.getId(), user.getId(), "testComment", null);
         Long commentId = response.getCommentId();
 
         // When
-        commentService.updateLikeCount(user1.getId(), commentId);
+        commentService.updateLikeCount(user.getId(), commentId);
         commentService.updateLikeCount(user2.getId(), commentId);
 
         // Then
@@ -197,44 +300,49 @@ public class CommentServiceTest {
     }
 
     @Test
-    @DisplayName("댓글 아이디로 좋아요 누른 유저 찾기")
+    @DisplayName("CommentLike로 좋아요 누른 유저 찾기")
     void findCommentLikeTest3() throws InterruptedException {
         // Given
-        User user1 = userRepository.findById(10L).orElseThrow(() -> new IllegalArgumentException("user not found"));
-
         CommentResponse response = commentService.createComment(post.getId(), user.getId(), "testComment", null);
         Long commentId = response.getCommentId();
 
         // When
-        commentService.updateLikeCount(user1.getId(), commentId);
-        List<CommentLike> commentLike = commentLikeRepository.findByCommentId(commentId);
-
+        commentService.updateLikeCount(user.getId(), commentId);
+        List<CommentLike> commentLikes = commentLikeRepository.findByCommentId(commentId);
 
         // Then
-        assertEquals(commentLike.get(0).getUser().getId(), 10L);
+        assertThat(commentLikes).hasSize(1);
+        assertEquals(commentLikes.getFirst().getUser().getId(), user.getId());
     }
+
+     */
+
 
     /*
     @Test
     @DisplayName("동시에 4명이 comment의 좋아요를 증가시킬때 ")
     public void likeUpdateSameTime() throws InterruptedException {
-        ExecutorService executorService = Executors.newFixedThreadPool(200);
+        User user2 = new User(2L, "testUser2");
+        userRepository.save(user2);
+        User user3 = new User(3L, "testUser3");
+        userRepository.save(user3);
+        User user4 = new User(4L, "testUser4");
+        userRepository.save(user4);
 
-        CountDownLatch countDownLatch = new CountDownLatch(4);
 
-        User user1 = userRepository.findById(10L).orElseThrow(() -> new IllegalArgumentException("user not found"));
-        User user2 = userRepository.findById(11L).orElseThrow(() -> new IllegalArgumentException("user not found"));
-        User user3 = userRepository.findById(12L).orElseThrow(() -> new IllegalArgumentException("user not found"));
-        User user4 = userRepository.findById(13L).orElseThrow(() -> new IllegalArgumentException("user not found"));
 
-        CommentResponse commentResponse = commentService.createComment(post.getId(), user1.getId(), "testComment", null);
+        CommentResponse commentResponse = commentService.createComment(post.getId(), user.getId(), "testComment", null);
         Long commentId = commentResponse.getCommentId();
+
+        System.out.println("user 생성 완");
+        Thread.sleep(100); // 댓글 생성 후 100ms 대기
+
+        ExecutorService executorService = Executors.newFixedThreadPool(4);
+        CountDownLatch countDownLatch = new CountDownLatch(4);
 
         executorService.execute(()->{
             try{
-                commentService.updateLikeCount(user1.getId(), commentId);
-            } catch (InterruptedException e) {
-                throw new RuntimeException(e);
+                commentService.updateLikeCount(user.getId(), commentId);
             } finally{
                 countDownLatch.countDown();
             }
@@ -243,8 +351,6 @@ public class CommentServiceTest {
         executorService.execute(()->{
             try{
                 commentService.updateLikeCount(user2.getId(), commentId);
-            } catch (InterruptedException e) {
-                throw new RuntimeException(e);
             } finally{
                 countDownLatch.countDown();
             }
@@ -253,8 +359,6 @@ public class CommentServiceTest {
         executorService.execute(()->{
             try{
                 commentService.updateLikeCount(user3.getId(), commentId);
-            } catch (InterruptedException e) {
-                throw new RuntimeException(e);
             } finally{
                 countDownLatch.countDown();
             }
@@ -263,8 +367,6 @@ public class CommentServiceTest {
         executorService.execute(()->{
             try{
                 commentService.updateLikeCount(user4.getId(), commentId);
-            } catch (InterruptedException e) {
-                throw new RuntimeException(e);
             } finally{
                 countDownLatch.countDown();
             }
@@ -273,7 +375,19 @@ public class CommentServiceTest {
         countDownLatch.await();
 
         Comment comment = commentRepository.findById(commentId).get();
-        assertEquals(comment.getLikeCount(), 4);
+        assertEquals(4, comment.getLikeCount());
     }
-    */
+
+     */
+
+    private static String asJsonString(final Object obj) {
+        try {
+            String result = new ObjectMapper().writeValueAsString(obj);
+            System.out.println(result);
+            return result;
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+    }
+
 }
